<resources>
    <string name="app_name">Search and rescue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="auth">Authorization</string>
    <string name="volunteer">Volunteer</string>
    <string name="tasks">Tasks</string>
    <string name="map">Map</string>
    <string name="new_task">New task</string>

    <string name="login">Login:</string>
    <string name="pass">Password:</string>

    <string name="full_name">Full name:</string>
    <string name="avatar">Avatar:</string>
    <string name="tel">Telephone:</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="auto_set">Transport</string>
    <string name="auto_type">Type of Transport</string>
    <string name="auto_name">Transport Name</string>
    <string name="register_sign">Register sign</string>
    <string name="seats">Seats (free)</string>
    <string name="equipment">Equipment</string>
    <string name="eq_info">Your equipment (comma separated)</string>
    <string name="save">Save</string>

    <string name="task_title">Title</string>
    <string name="task_desc">Description</string>
    <string name="task_need_res">Necessary equipment</string>
    <string name="task_weather">Natural conditions</string>
    <string name="task_time">Time</string>
    <string name="task_date_start">Start date</string>
    <string name="coor_1">Coordinates 1</string>
    <string name="coor_2">Coordinates 2</string>
    <string name="task_attach">Attach an image</string>
    <string name="task_create">Create Task</string>

    <string name="exit">Exit</string>

    <string name="sex_and_age">Sex and Age:</string>

    <string name="task_fix">Fix the Task</string>
    <string name="task_base_arrived">Arrived at the Base</string>
    <string name="task_home_arrived">Arrived at home</string>
    <string name="chat">Chat</string>

    <string name="coor">Enter Coordinates</string>

    <string-array name="sex">
        <item>Man</item>
        <item>Woman</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">Auth</string>
</resources>
