<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vol"
            android:icon="@drawable/ic_user_silhouette"
            android:title="@string/volunteer" />
        <item
            android:id="@+id/volonters"
            android:title="Волонтеры"/>
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_25242"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_34250"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_addTasks"
            android:icon="@drawable/ic_add"
            android:title="@string/new_task" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_logout"
            android:title="@string/exit"/>
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

</menu>
