<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".AddNewTask">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameTaskNewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/task_title"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_light"
                android:textColorHint="#88FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/describingOfTaskNewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/task_desc"
                android:inputType="textMultiLine"
                android:textColor="#EEE"
                android:textColorHint="#88FFFFFF"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/timeNewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/task_time"
                android:inputType="time"
                android:textColor="#DDD"
                android:textColorHint="#88FFFFFF" />


            <EditText
                android:id="@+id/coordinate1NewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/coor_1"
                android:inputType="textPersonName"
                android:textColor="#DDD"
                android:textColorHint="#88FFFFFF" />

            <Button
                android:id="@+id/addNewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/button_default"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/task_create"
                android:textColorHint="#88FFFFFF" />
            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/button_default"
                android:fontFamily="@font/ubuntu_bold"
                android:text="Назад"
                android:textColorHint="#88FFFFFF" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>