<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".Volunteer">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="64dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:fontFamily="@font/maven_pro_bold"
                        android:text="@string/full_name"
                        android:textColor="@android:color/background_light"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:fontFamily="@font/maven_pro_bold"
                        android:text="@string/avatar"
                        android:textColor="@android:color/background_light"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/vol_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/input_default"
                        android:ems="10"
                        android:fontFamily="@font/maven_pro"
                        android:inputType="textPersonName"
                        android:padding="20dp"
                        android:textColor="@android:color/background_light" />

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:scaleType="fitStart"
                        android:src="@drawable/ic_man" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/maven_pro_bold"
                        android:text="@string/age"
                        android:textColor="@android:color/background_light"
                        android:textSize="20sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <EditText
                        android:id="@+id/vol_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/input_default"
                        android:fontFamily="@font/maven_pro"
                        android:inputType="number"
                        android:padding="20dp"
                        android:textColor="@android:color/background_light" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:background="@drawable/card"
                        app:cardCornerRadius="18dp">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="157dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_car"
                            android:translationX="-80dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="32dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/maven_pro_black"
                                android:padding="5dp"
                                android:text="@string/auto_set"
                                android:textColor="#484848"
                                android:textSize="24sp" />

                            <CheckBox
                                android:id="@+id/has_car"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/maven_pro"
                                android:text="@string/auto_set"
                                android:textColor="#555"
                                android:theme="@style/CardCheckbox" />

                            <EditText
                                android:id="@+id/car_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:fontFamily="@font/maven_pro"
                                android:hint="@string/auto_type"
                                android:inputType="textPersonName"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/car_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:fontFamily="@font/maven_pro"
                                android:hint="@string/auto_name"
                                android:inputType="textPersonName"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/car_reg_sign"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:fontFamily="@font/maven_pro"
                                android:hint="@string/register_sign"
                                android:inputType="textPersonName"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/car_seats"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:fontFamily="@font/maven_pro"
                                android:hint="@string/seats"
                                android:inputType="number"
                                android:visibility="gone" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/card"
                        app:cardCornerRadius="18dp">

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="157dp"
                            android:layout_height="150dp"
                            android:padding="30dp"
                            android:src="@drawable/ic_handyman_tools"
                            android:translationX="-60dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="32dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView19"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/maven_pro_black"
                                android:padding="5dp"
                                android:text="@string/equipment"
                                android:textColor="#484848"
                                android:textSize="24sp" />

                            <EditText
                                android:id="@+id/equipment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:fontFamily="@font/maven_pro"
                                android:hint="@string/eq_info"
                                android:inputType="textMultiLine" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/addVol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="48dp"
                        android:background="@drawable/button_default"
                        android:fontFamily="@font/maven_pro_bold"
                        android:onClick="chooseImage"
                        android:padding="24dp"
                        android:text="@string/save"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>