<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context="com.example.searchandrescue.Auth">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/maven_pro_bold"
                android:text="@string/auth"
                android:textColor="@android:color/background_light"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/maven_pro_bold"
                android:text="@string/login"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/input_default"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/maven_pro_bold"
                android:text="@string/pass"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/input_default"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/singIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginRight="72dp"
                android:background="@drawable/button_default"
                android:text="Войти" />

            <Button
                android:id="@+id/singUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="72dp"
                android:background="@drawable/button_default"
                android:text="Зарегестрироваться" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
