<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatarFromCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars[3]" />

            <TextView
                android:id="@+id/nameFromDatabase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descridingFromDatabase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu"
                android:textColor="#111"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/equipmentFromDatabase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="#222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/naturalConditionsFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="#222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/timeFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="#222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dateFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="#222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/coordinate1From"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="#222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/coordinate2From"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="#222"
                android:textSize="14sp" />

            <Button
                android:id="@+id/cektedTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="24dp"
                android:text="@string/task_fix"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/wentToBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/button_light"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="18dp"
                android:text="@string/task_base_arrived"
                android:textSize="16sp" />

            <Button
                android:id="@+id/returnToHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/button_light"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="18dp"
                android:text="@string/task_home_arrived"
                android:textSize="16sp" />

            <Button
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/button_light"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="18dp"
                android:text="@string/chat"
                android:textSize="16sp" />
            <Button
                android:id="@+id/back2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/button_light"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="18dp"
                android:text="Назад"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>